# serverless-discord

./: Cargo.toml
serverless-discord/: bruno.json  test signature verification failure.bru  test signature verification success.bru
src/: main.rs  routes.rs  security.rs
src/model/: channel.rs  guild.rs  interactions.rs  message.rs  mod.rs  primitives.rs  user.rs
