[package]
name = "serverless-discord"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.14.0"
ed25519-dalek = "2.1"
tokio = { version = "1", features = ["macros"] }
axum = { version = "0.8.4", features = ["macros"] }
serde_json = { version = "1.0.140" }
hex = "0.4.3"
base64 = "0.22.1"
serde = { version = "1.0.219", features = ["derive"] }
log = "0.4.27"
env_logger = "0.11.8"
