[package]
name = "serverless-discord"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.14.0"
ed25519-dalek = { version = "2.1" , features = ["rand_core", "signature"]}
tokio = { version = "1", features = ["macros"] }
axum = { version = "0.8.4", features = ["macros"] }
serde_json = { version = "1.0.140" }
hex = "0.4.3"
serde = { version = "1.0.219", features = ["derive"] }
log = "0.4.27"
env_logger = "0.11.8"
simd-json = { version = "0.15.1", features = ["serde"] }
rand = "0.8"
